# termrock

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENGINEERING.md  LICENSE  MIGRATING.md  NOTICE  PUBLISH-AUDIT.md  PULL_REQUESTS.md  README.md  RELEASING.md  REUSE.toml  SECURITY.md  TESTING.md  TODO.md  cliff.toml  compatibility.toml  deny.toml  dependency-tree.txt  mise.toml  performance-baseline.md  provenance.toml  renovate.json
crates/jackin-tui/: AGENTS.md  COMPONENTS.md  Cargo.toml  README.md
crates/jackin-tui-lookbook/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/jackin-tui-lookbook/src/: interactors.rs  main.rs  stories.rs  svg.rs  tests.rs
crates/jackin-tui-lookbook/src/stories/: tests.rs
crates/jackin-tui/src/: animation.rs  ansi.rs  ansi_text.rs  components.rs  geometry.rs  host_colors.rs  keymap.rs  lib.rs  output.rs  ownership.rs  prune_output.rs  runtime.rs  scroll.rs  terminal_modes.rs  tests.rs  theme.rs  url_text.rs
crates/jackin-tui/src/ansi_text/: tests.rs
crates/jackin-tui/src/components/: bottom_chrome.rs  brand_header.rs  button_strip.rs  confirm_dialog.rs  container_info.rs  dialog_layout.rs  diff_view.rs  error_dialog.rs  filter_input.rs  focus_owner.rs  hint_bar.rs  hover_tracker.rs  modal_backdrop.rs  modal_lifecycle.rs  modal_rects.rs  panel.rs  save_discard_dialog.rs  scrollable_panel.rs  select_list.rs  status_footer.rs  status_popup.rs  tab_strip.rs  text_input.rs  toast.rs
crates/jackin-tui/src/components/bottom_chrome/: tests.rs
crates/jackin-tui/src/components/brand_header/: tests.rs
crates/jackin-tui/src/components/button_strip/: tests.rs
crates/jackin-tui/src/components/confirm_dialog/: tests.rs
crates/jackin-tui/src/components/container_info/: tests.rs
crates/jackin-tui/src/components/dialog_layout/: tests.rs
crates/jackin-tui/src/components/diff_view/: tests.rs
crates/jackin-tui/src/components/error_dialog/: tests.rs
crates/jackin-tui/src/components/filter_input/: tests.rs
crates/jackin-tui/src/components/hint_bar/: tests.rs
crates/jackin-tui/src/components/hover_tracker/: tests.rs
crates/jackin-tui/src/components/modal_backdrop/: tests.rs
crates/jackin-tui/src/components/modal_lifecycle/: tests.rs
crates/jackin-tui/src/components/panel/: tests.rs
crates/jackin-tui/src/components/save_discard_dialog/: tests.rs
crates/jackin-tui/src/components/scrollable_panel/: tests.rs
crates/jackin-tui/src/components/select_list/: tests.rs
crates/jackin-tui/src/components/status_footer/: tests.rs
crates/jackin-tui/src/components/tab_strip/: tests.rs
crates/jackin-tui/src/components/text_input/: tests.rs
crates/jackin-tui/src/components/toast/: tests.rs
crates/jackin-tui/src/host_colors/: tests.rs
crates/jackin-tui/src/keymap/: tests.rs
crates/jackin-tui/src/prune_output/: tests.rs
crates/jackin-tui/src/runtime/: tests.rs
crates/jackin-tui/src/scroll/: tests.rs
crates/jackin-tui/src/terminal_modes/: tests.rs
crates/jackin-tui/src/url_text/: tests.rs
crates/termrock/: AGENTS.md  COMPONENTS.md  Cargo.toml  README.md
crates/termrock-lookbook/: AGENTS.md  Cargo.toml  README.md
crates/termrock-lookbook/src/: app.rs  editor.rs  focus.rs  interactors.rs  json.rs  knobs.rs  lib.rs  main.rs  picker.rs  runner.rs  stories.rs  svg.rs  table.rs  tests.rs
crates/termrock-lookbook/src/stories/: tests.rs
crates/termrock/examples/: component.rs  crossterm_managed.rs  crossterm_manual.rs  direct.rs  flux.rs  showcase.rs  tea.rs
crates/termrock/examples/support/: mod.rs
crates/termrock/src/: animation.rs  ansi.rs  ansi_text.rs  components.rs  geometry.rs  keymap.rs  lib.rs  osc.rs  runtime.rs  terminal_modes.rs  tests.rs  theme.rs  url_text.rs
crates/termrock/src/ansi_text/: tests.rs
crates/termrock/src/components/: bottom_chrome.rs  brand_header.rs  button_strip.rs  confirm_dialog.rs  container_info.rs  dialog_layout.rs  diff_view.rs  error_dialog.rs  filter_input.rs  hint_bar.rs  hover_tracker.rs  modal_backdrop.rs  modal_lifecycle.rs  modal_rects.rs  panel.rs  save_discard_dialog.rs  scrollable_panel.rs  select_list.rs  status_footer.rs  status_popup.rs  tab_strip.rs  text_input.rs  toast.rs
crates/termrock/src/components/bottom_chrome/: tests.rs
crates/termrock/src/components/brand_header/: tests.rs
crates/termrock/src/components/button_strip/: tests.rs
crates/termrock/src/components/confirm_dialog/: tests.rs
crates/termrock/src/components/container_info/: tests.rs
crates/termrock/src/components/dialog_layout/: tests.rs
crates/termrock/src/components/diff_view/: tests.rs
crates/termrock/src/components/error_dialog/: tests.rs
crates/termrock/src/components/filter_input/: tests.rs
crates/termrock/src/crossterm/: event.rs  mod.rs  session.rs
crates/termrock/src/host_colors/: tests.rs
crates/termrock/src/input/: event.rs  mod.rs
crates/termrock/src/interaction/: focus.rs  focus_owner.rs  hover_tracker.rs  mod.rs  modal.rs
crates/termrock/src/keymap/: tests.rs
crates/termrock/src/layout/: dialog.rs  mod.rs
crates/termrock/src/osc/: encode.rs  mod.rs  request.rs
crates/termrock/src/runtime/: contract.rs  frame.rs  mod.rs  runner.rs  subscription.rs  tests.rs  time.rs
crates/termrock/src/scroll/: mod.rs  render.rs  tests.rs
crates/termrock/src/style/: mod.rs  palette.rs
crates/termrock/src/terminal_modes/: tests.rs
crates/termrock/src/text/: mod.rs
crates/termrock/src/url_text/: tests.rs
crates/termrock/src/widgets/: action_bar.rs  completion_menu.rs  detail_table.rs  dialog.rs  diff.rs  edit_core.rs  form.rs  hint_bar.rs  list.rs  log_pane.rs  mod.rs  panel.rs  picker.rs  progress.rs  selection.rs  split_pane.rs  status_bar.rs  table.rs  tabs.rs  tests.rs  text_area.rs  text_input.rs  toast.rs  tree.rs  viewport.rs  virtual_grid.rs
crates/termrock/tests/: detail_table.rs  detail_table_hot_path.rs  documentation_examples.rs  form.rs  generic_state_defaults.rs  input_adapter.rs  log_pane_hot_path.rs  picker_hot_path.rs  split_pane.rs  table_hot_path.rs  text_area_hot_path.rs  tree.rs  tree_hot_path.rs  viewport_hot_path.rs
(+175 files in other folders)
