[workspace]
members = ["crates/termrock", "crates/termrock-lookbook"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/tailrocks/termrock"

[workspace.dependencies]
anstyle-parse = "0.2.7"
base64 = "0.22.1"
crossterm = "0.29.0"
ratatui = "0.30.2"
ratatui-core = "0.1.2"
ratatui-crossterm = "0.1.2"
ratatui-widgets = "0.3.2"
similar = "2.7.0"
tui-scrollbar = "0.2.7"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
