[package]
name = "jackin-tui"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Shared phosphor palette and tab-strip helpers used by jackin's console TUI and the in-container multiplexer."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_tui"
path = "src/lib.rs"

[dependencies]
anstyle-parse = "1.0"
base64 = "0.22"
crossterm = "0.29"
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
owo-colors = { version = "4", features = ["supports-colors"] }
ratatui = "0.30"
similar = "2"
tokio = { version = "1", features = ["io-util", "rt", "sync", "time"] }
tui-scrollbar = "0.2.4"
unicode-width = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util"] }

[lints]
workspace = true
