# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-tui"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Shared phosphor palette and tab-strip helpers used by jackin❯'s console TUI and the in-container multiplexer."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_tui"
path = "src/lib.rs"

[dependencies]
anstyle-parse = { workspace = true }
base64 = { workspace = true }
crossterm = { workspace = true }
jackin-core = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time"] }
tui-scrollbar = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[lints]
workspace = true
