# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "termrock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui components and terminal interaction foundations for Tailrocks applications"
readme = "README.md"

[lib]
name = "termrock"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "dep:ratatui-crossterm"]

[dependencies]
anstyle-parse.workspace = true
base64.workspace = true
crossterm = { workspace = true, optional = true }
owo-colors.workspace = true
ratatui.workspace = true
ratatui-core.workspace = true
ratatui-crossterm = { workspace = true, optional = true }
similar.workspace = true
tokio = { workspace = true, features = ["io-util", "rt", "sync", "time"] }
tui-scrollbar.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[lints]
workspace = true
